trunk/Archive2/8a/40287725f57777/output
main.cpp:29:5: error: must use 'class' tag to refer to type 'time' in this scope
    time to;
    ^
    class 
/usr/include/time.h:186:15: note: class 'time' is hidden by a non-type declaration of 'time' here
extern time_t time (time_t *__timer) __THROW;
              ^
main.cpp:9:9: warning: private field 'mins' is not used [-Wunused-private-field]
    int mins;
        ^
main.cpp:10:9: warning: private field 'hours' is not used [-Wunused-private-field]
    int hours;
        ^
2 warnings and 1 error generated.
